/*
 * Copyright 2022 Thoughtworks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
  id 'java'
}
apply from: "https://raw.githubusercontent.com/gocd/gocd-plugin-gradle-task-helpers/master/helper.gradle?_=${(int) (new Date().toInstant().epochSecond / 60)}"

group = 'com.thoughtworks.gocd'

gocdPlugin {
  id = 'com.thoughtworks.gocd.elastic-agent.ecs'
  pluginVersion = '11.0.0'
  goCdVersion = '26.2.0'
  name = 'GoCD Elastic Agent Plugin for Amazon ECS'
  description = 'GoCD Elastic Agent Plugin for Amazon Elastic Container Service allow for more efficient use of instances'
  vendorName = 'Thoughtworks, Inc.'
  vendorUrl = 'https://github.com/gocd/gocd-ecs-elastic-agent'

  githubRepo {
    owner = System.getenv('GITHUB_USER') ?: 'bob'
    repo = 'gocd-ecs-elastic-agent'
    token = System.getenv('GITHUB_TOKEN') ?: 'bad-token'
  }

  pluginProject = project

  prerelease = !"No".equalsIgnoreCase(System.getenv('PRERELEASE'))
  prereleaseDryrun = !"Yes".equalsIgnoreCase(System.getenv('PRERELEASE'))
  assetsToRelease = [project.tasks.findByName('jar')]
}

version = gocdPlugin.fullVersion(project)

repositories {
  mavenCentral()
  mavenLocal()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

ext {
  deps = [
    gocdPluginApi: 'cd.go.plugin:go-plugin-api:26.1.0',
    lombok       : 'org.projectlombok:lombok:1.18.46',
  ]

  versions = project.ext.deps.collectEntries { lib, libGav -> [lib, libGav.split(':').last()] }
}

dependencies {
  annotationProcessor project.deps.lombok

  compileOnly project.deps.lombok
  compileOnly project.deps.gocdPluginApi

  implementation('com.google.code.gson:gson:2.14.0') {
    exclude(module: 'error_prone_annotations') // Not needed at runtime
  }
  implementation 'org.apache.commons:commons-lang3:3.20.0'

  implementation platform('software.amazon.awssdk:bom:2.48.3')
  implementation("software.amazon.awssdk:ecs") {
    exclude module: 'netty-nio-client' // Not using async interactions right now.
  }
  implementation("software.amazon.awssdk:ec2") {
    exclude module: 'netty-nio-client' // Not using async interactions right now.
  }
  implementation("software.amazon.awssdk:sts") {
    exclude module: 'netty-nio-client' // Not using async interactions right now.
  }
  implementation 'software.amazon.awssdk:apache5-client'

  implementation 'org.freemarker:freemarker:2.3.34'
  implementation platform('org.slf4j:slf4j-bom:2.0.18')

  testImplementation platform('org.junit:junit-bom:6.1.2')
  testImplementation 'org.junit.jupiter:junit-jupiter-api'
  testImplementation 'org.junit.jupiter:junit-jupiter-params'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  testImplementation project.deps.gocdPluginApi
  testRuntimeOnly 'org.slf4j:slf4j-simple'
  testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.1.8'
  testImplementation 'org.assertj:assertj-core:3.27.7'
  testImplementation 'org.mockito:mockito-core:5.23.0'
  testImplementation 'org.skyscreamer:jsonassert:1.5.3'
  testImplementation 'org.jsoup:jsoup:1.22.2'
}

tasks.withType(JavaCompile).configureEach {
  options.deprecation = true
  options.encoding = 'utf-8'
  options.warnings = true
  options.compilerArgs << "-Xlint:all"
  options.compilerArgs << "-Xlint:-serial"
}

test {
  useJUnitPlatform()
}

jar {
  from(configurations.runtimeClasspath) {
    into "lib/"
  }
}

interface InjectedExecOps {
  @Inject
  ExecOperations getExecOps()
}

tasks.register('bundleInstall') {
  inputs.files(project.files('contrib/cloudformation-template/Gemfile', 'contrib/cloudformation-template/Gemfile.lock'))
  outputs.dir(project.file('.bundle'))

  def injected = project.objects.newInstance(InjectedExecOps)
  doLast {
    injected.execOps.exec {
      commandLine = ['bundle']
      workingDir = project.file('contrib/cloudformation-template')
      standardOutput = System.out
      errorOutput = System.err
    }
  }
}

tasks.register('stackfile') {
  dependsOn bundleInstall

  inputs.file(project.file('contrib/cloudformation-template/ecs_cloud_formation_template.rb'))
  outputs.file(project.file("${project.buildDir}/ecs_cloud_formation_template.json"))

  def injected = project.objects.newInstance(InjectedExecOps)
  doLast {
    injected.execOps.exec {
      commandLine = ['bundle', 'exec', 'ruby', 'ecs_cloud_formation_template.rb', 'expand']
      workingDir = project.file('contrib/cloudformation-template')
      standardOutput = new FileOutputStream(project.file("${project.buildDir}/ecs_cloud_formation_template.json"))
      errorOutput = System.err
    }
  }
}
